# combat_sleuth

./: README.md  docker-compose.yml
api_server/: .env  Cargo.toml  Rocket.toml
api_server/migration/: Cargo.toml
api_server/migration/src/: lib.rs  m20230310_000001_create_monster_table.rs
api_server/migrations/2023-03-02-212023_add_encounters_model/: down.sql  up.sql
api_server/src/: lib.rs  main.rs  models.rs  schema.rs  setup.rs
api_server/src/entities/: mod.rs  monster.rs  prelude.rs
api_server/src/migrator/: mod.rs
api_server/static/css/: skeleton.css
api_server/templates/: base.html.tera  index.html.tera  monster.html.tera  monsters.html.tera  success.html.tera
web/: Dockerfile  package.json
web/src/: App.tsx
