[package]
name = "api_server"
version = "0.0.1"
authors = ["Richard Harris <richard.jonathon.harris@gmail.com>"]

[dependencies]
rocket = "0.4"
diesel = { version = "1.4.1", features = ["postgres"] }
serde = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "diesel_postgres_pool"]