[package]
name = "api_server"
version = "0.0.1"
authors = ["Richard Harris <richard.jonathon.harris@gmail.com>"]
edition = "2021"

[dependencies]
dotenvy = "^0.15"
futures = "0.3.21"
rocket = { version = "^0.5.0-rc.2", features = ["json"] }
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "debug-print", "macros", "mock", "with-json", "with-uuid" ] }
sea-orm-migration = "^0.9.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.81"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]